--- a/BudggyUWP/BudggyUWP/MainPage.xaml
+++ b/BudggyUWP/BudggyUWP/MainPage.xaml
@@ -130,7 +130,7 @@
             </SplitView.Pane>
 
             <SplitView.Content>
-                <Frame Name="contentFrame"/>
+                <Frame Name="contentFrame" Navigated="ContentFrame_Navigated"/>
             </SplitView.Content>
         </SplitView>
     </Grid>
